<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >


    <item
        android:id="@+id/preferred_download_type"
        android:title="@string/preferred_download_type"
        android:icon="@drawable/baseline_insert_drive_file_24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/format"
        android:title="@string/format"
        android:icon="@drawable/ic_format"
        app:showAsAction="always"/>

    <item
        android:id="@+id/folder"
        android:title="@string/directories"
        android:icon="@drawable/baseline_folder_24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/container"
        android:title="@string/container"
        app:actionLayout="@layout/bottom_app_bar_text"
        app:showAsAction="always"/>

    <item
        android:id="@+id/incognito"
        android:title="@string/incognito"
        android:icon="@drawable/ic_nightly"
        app:showAsAction="always"/>

    <item
        android:id="@+id/more"
        android:title="@string/more"
        android:icon="@drawable/ic_more"
        app:showAsAction="always"/>


</menu>

