<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item
        android:id="@+id/select_between"
        android:visible="false"
        android:title="@string/select_between"
        android:icon="@drawable/ic_select_between"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_results"
        android:title="@string/remove_results"
        android:icon="@drawable/baseline_delete_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/select_all"
        android:title="@string/select_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/invert_selected"
        android:title="@string/invert_selected"
        app:showAsAction="never" />

    <item
        android:id="@+id/export_clipboard"
        android:title="@string/export_from_clipboard"
        app:showAsAction="never" />
</menu>

