<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/Widget.Material3.BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/format_filter_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/format_filter"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/all"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:drawablePadding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/all"
            app:drawableStartCompat="@drawable/ic_check" />


        <TextView
            android:id="@+id/suggested"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:drawablePadding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/suggested"
            app:drawableStartCompat="@drawable/empty" />

        <TextView
            android:id="@+id/smallest"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:drawablePadding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/format_smallest"
            app:drawableStartCompat="@drawable/empty" />


        <TextView
            android:id="@+id/generic"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:drawablePadding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/generic"
            app:drawableStartCompat="@drawable/empty" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/format_source_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/format_source"
            android:textSize="14sp"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>
