<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/embed_subtitles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/embed_subtitles" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/save_subs"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:text="@string/save_subs"
        android:layout_height="wrap_content" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/save_auto_subs"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:text="@string/save_auto_subs"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:id="@+id/subtitle_languages"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textColor="?android:attr/textColorPrimaryDisableOnly"
            android:text="@string/subtitle_languages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:maxLines="3"
            android:ellipsize="end"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>