<LinearLayout android:layout_width="match_parent"
    android:id="@+id/adjust"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="10dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:paddingBottom="5dp"
        android:layout_height="wrap_content"
        android:text="@string/adjust_audio" />

    <HorizontalScrollView
        android:scrollbars="none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            app:chipSpacingVertical="0dp"
            app:singleLine="true"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:id="@+id/embed_thumb"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:outlineProvider="none"
                android:checked="false"
                android:text="@string/embed_thumb"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/crop_thumb"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:outlineProvider="none"
                android:visibility="gone"
                android:text="@string/crop_thumb"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/split_by_chapters"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:outlineProvider="none"
                android:text="@string/split_by_chapters"/>

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacingVertical="0dp"
            app:singleLine="true">


            <com.google.android.material.chip.Chip
                android:id="@+id/sponsorblock_filters"
                style="@style/Widget.Material3.Chip.Assist.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="30dp"
                android:outlineProvider="none"
                android:text="@string/sponsorblock"
                app:chipIcon="@drawable/ic_money"
                app:chipIconVisible="true"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/audio_bitrate"
                style="@style/Widget.Material3.Chip.Assist.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="30dp"
                android:outlineProvider="none"
                android:text="@string/bitrate"
                app:chipIcon="@drawable/baseline_high_quality_24"
                app:chipIconVisible="true"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filename_template"
                style="@style/Widget.Material3.Chip.Assist.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:outlineProvider="none"
                android:minWidth="30dp"
                android:text="@string/file_name_template"
                app:chipIcon="@drawable/ic_edit"
                app:chipIconVisible="true"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/extra_commands"
                style="@style/Widget.Material3.Chip.Assist.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/use_extra_commands"
                android:outlineProvider="none"

                app:chipIconVisible="true"
                app:chipIcon="@drawable/ic_terminal"
                android:minWidth="30dp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/cut"
                style="@style/Widget.Material3.Chip.Assist.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:chipIconVisible="true"
                android:outlineProvider="none"
                app:chipIcon="@drawable/ic_cut"
                android:text="@string/cut"
                android:minWidth="30dp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>


    
</LinearLayout>